# paracl

./: .gitignore  CMakeLists.txt  README.org  example.parcl  flake.nix  main.cpp
.github/workflows/: linux-build.yml
examples/: example.parcl
fuzz/lexer/: fuzz-lexer.cpp
include/paracl/ast/: ast.h  bit_operations.h  context.h  graphviz_utils.h  nodes.h
include/paracl/graphviz/: ast-node.h  ast_utils.h  attributes.h  graphviz.h
include/paracl/lexer/: generic-lexer.h  lexer.h  syntax-highlighting.h  token.h
include/paracl/parser/: parser.h
include/paracl/structures/: index-interval-treap.h  index-span.h  overlay.h
include/paracl/text/: ansi.h  colored-text.h  colors.h  display.h  file.h  text-annotator.h
src/: CMakeLists.txt
src/graphviz/: CMakeLists.txt  ast-node.cpp  ast_utils.cpp  attributes.cpp  graphviz.cpp
src/interpreter/: CMakeLists.txt  driver.cpp
src/lexer/: CMakeLists.txt  driver.cpp  generic-lexer.cpp  lexer.cpp  state-machine.cpp  state-machine.h  token.cpp
src/parser/: CMakeLists.txt  driver.cpp  parser.cpp
src/structures/: CMakeLists.txt  index-interval-treap.cpp
src/text/: CMakeLists.txt  colored-text.cpp  display.cpp  file.cpp  text-annotator.cpp
tests/interpreter/: interpreter.cpp
tests/lexer/: lexer.cpp
tests/parser/: parser.cpp
tests/structures/: index-interval-treap.cpp  overlay.cpp
tests/text/: display.cpp  text-annotator.cpp
